--- a/LiveTest/LiveTest.Client/Components/TabViewComponent.razor
+++ b/LiveTest/LiveTest.Client/Components/TabViewComponent.razor
@@ -3,7 +3,7 @@
     @for (var i = 0; i < TabCount; ++i) {
         var j = i;
         var header = $"Header{j + 1}";
-        <TnTTabChild Title="@header" Icon="MaterialIcon.Flight" Disabled="@((j % 5) == 0 || Disabled)">
+        <TnTTabChild Title="@header" Icon="@(new MaterialIcon(MaterialIcon.Flight))" Disabled="@((j % 5) == 0 || Disabled)">
             Content@(j + 1)
         </TnTTabChild>
 
