--- a/LiveTest/LiveTest.Client/Pages/Chips.razor
+++ b/LiveTest/LiveTest.Client/Pages/Chips.razor
@@ -3,7 +3,7 @@
 @rendermode InteractiveAuto
 
 
-<TnTComponents.TnTInputChip StartIcon="MaterialIcon.GridOn">
+<TnTComponents.TnTInputChip StartIcon="@(new MaterialIcon(MaterialIcon.GridOn))">
     Text
 </TnTComponents.TnTInputChip>
 
