--- a/LiveTest/LiveTest.Client/Pages/NavLinks.razor
+++ b/LiveTest/LiveTest.Client/Pages/NavLinks.razor
@@ -5,9 +5,9 @@
 
 
 <TnTNavLink Href="/navlinks">
-    @MaterialIcon.Search.Render()
+    <MaterialIcon Icon="@MaterialIcon.Search"/>
     Button Text
-    @MaterialIcon.Group.Render()
+    <MaterialIcon Icon="@MaterialIcon.Group"/>
 </TnTNavLink>
 
 <TnTNavLink Href="/navlinks" Outlined="true">
