--- a/TnTComponents/Styles/Common/_materialIcons.scss
+++ b/TnTComponents/Styles/Common/_materialIcons.scss
@@ -1,4 +1,8 @@
-﻿.material-icons.mi-small {
+﻿@import "https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@20,400,0,0";
+@import "https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20,400,0,0";
+@import "https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20,400,0,0";
+
+.material-icons.mi-small {
     font-size: 18px;
 }
 
