--- a/TnTComponents/Buttons/TnTImageButton.razor
+++ b/TnTComponents/Buttons/TnTImageButton.razor
@@ -11,7 +11,7 @@
     disabled="@Disabled"
     autofocus="@AutoFocus"
     @onclick="OnClick">
-    @Icon
+    @Icon.Render()
 </button>
 
 @RenderPageScript()
