--- a/TnTComponents/Styles/Common/_materialIcons.scss
+++ b/TnTComponents/Styles/Common/_materialIcons.scss
@@ -1,6 +1,6 @@
-﻿@import "https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@20,400,0,0";
-@import "https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20,400,0,0";
-@import "https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20,400,0,0";
+﻿@import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp');
+@import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded');
+@import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined');
 
 .material-icons.mi-small {
     font-size: 18px;
