--- a/TnTComponents/Theming/TnTThemeToggle.razor
+++ b/TnTComponents/Theming/TnTThemeToggle.razor
@@ -2,7 +2,7 @@
 @namespace TnTComponents
 @using TnTComponents.Core
 <tnt-theme-toggle @attributes="AdditionalAttributes">
-    <span class="tnt-icon material-icons tnt-theme-toggle-icon">
+    <span class="tnt-icon material-symbols-outlined tnt-theme-toggle-icon">
     </span>
     <select title="Select Theme" class="tnt-theme-select">
         <option value="LIGHT">Light</option>
