Updated rendering order and added new CSS rules
In `TnTInputBase.cs` and `TnTInputSelect.cs`, the rendering order of `StartIcon` and `EndIcon` objects has been updated. A new CSS property `-webkit-text-fill-color` has been added in `_colors.scss` for webkit browsers. New CSS rules for center positioning and color setting have been added in `ForgotPassword.razor.scss`, `Login.razor.scss`, and `ResetPassword.razor.scss`.

--- a/TnTComponents/Styles/TnTComponents/_colors.scss
+++ b/TnTComponents/Styles/TnTComponents/_colors.scss
@@ -76,6 +76,7 @@ $color-classes-no-transparent: transparent, primary, on-primary, primary-contain
 
     .tnt-fg-color-#{$colorClass} {
         color: var(--tnt-color-#{$colorClass});
+        -webkit-text-fill-color: var(--tnt-color-#{$colorClass});
     }
 
     .tnt-accent-color-#{$colorClass} {
