`Update CSS for input elements and outline removal`
 Updated the `-webkit-text-fill-color` property in the `.tnt-fg-color-#{$colorClass}` class to only apply to `input` elements, either as a parent or as the element itself, enhancing specificity. Also, removed the `outline` property from the `.tnt-outlined` class, altering the appearance of these elements.

--- a/TnTComponents/Styles/TnTComponents/_colors.scss
+++ b/TnTComponents/Styles/TnTComponents/_colors.scss
@@ -76,7 +76,10 @@ $color-classes-no-transparent: transparent, primary, on-primary, primary-contain
 
     .tnt-fg-color-#{$colorClass} {
         color: var(--tnt-color-#{$colorClass});
-        -webkit-text-fill-color: var(--tnt-color-#{$colorClass});
+
+        &:is(input), &:has(input) {
+            -webkit-text-fill-color: var(--tnt-color-#{$colorClass});
+        }
     }
 
     .tnt-accent-color-#{$colorClass} {
