Add stopPropagation feature to TnTImageButton
The `TnTImageButton.razor` file has been updated to include a new attribute `@onclick:stopPropagation` to prevent click events from bubbling up the DOM tree. A new parameter `StopPropagation` has been added to the `TnTImageButton.razor.cs` file to control this attribute. No changes were made to the `OnInitialized` method.

--- a/TnTComponents/Buttons/TnTImageButton.razor
+++ b/TnTComponents/Buttons/TnTImageButton.razor
@@ -3,14 +3,15 @@
 @inherits TnTPageScriptComponent<TnTImageButton>
 
 <button is="tnt-button"
-    @attributes="AdditionalAttributes"
-    class="@CssClass"
-    style="@CssStyle"
-    name="@Name"
-    type="@Type.ToHtmlType()"
-    disabled="@Disabled"
-    autofocus="@AutoFocus"
-    @onclick="OnClick">
+        @attributes="AdditionalAttributes"
+        class="@CssClass"
+        style="@CssStyle"
+        name="@Name"
+        type="@Type.ToHtmlType()"
+        disabled="@Disabled"
+        autofocus="@AutoFocus"
+        @onclick="OnClick"
+        @onclick:stopPropagation="StopPropagation">
     @Icon.Render()
 </button>
 
