`Add conditional rendering for dates in TnTWeekView`
` `

`Introduced a conditional rendering of the date in TnTWeekView.razor, which is now only displayed if the HideDates property is set to false. Added a new HideDates property as a Parameter in TnTWeekView.razor.cs, allowing the value to be passed from a parent component. This gives the parent control over whether the dates should be displayed or not in the TnTWeekView component.`

--- a/TnTComponents/Scheduler/TnTWeekView.razor
+++ b/TnTComponents/Scheduler/TnTWeekView.razor
@@ -11,9 +11,11 @@
             @foreach (var (date, gridPosition) in _visibleDates) {
                 <div class="tnt-slot tnt-column-header tnt-label-large@(date == DateOnly.FromDateTime(DateTimeOffset.Now.Date) ? " today" : null)" style="@gridPosition.ToCssString()">
                     @date.ToString("dddd")
-                    <div>
-                        @date.ToString("dd")
-                    </div>
+                    @if (!HideDates) {
+                        <div>
+                            @date.ToString("dd")
+                        </div>
+                    }
                 </div>
             }
 
