--- a/TnTComponents/Styles/TnTComponents/_colors.scss
+++ b/TnTComponents/Styles/TnTComponents/_colors.scss
@@ -77,8 +77,16 @@ $color-classes-no-transparent: transparent, primary, on-primary, primary-contain
     .tnt-fg-color-#{$colorClass} {
         color: var(--tnt-color-#{$colorClass});
 
-        &:is(input), &:has(input) {
-            -webkit-text-fill-color: var(--tnt-color-#{$colorClass});
+        &:is(input) {
+            &:-webkit-autofill {
+                -webkit-text-fill-color: var(--tnt-color-#{$colorClass});
+            }
+        }
+
+        &:has(input) {
+            input:-webkit-autofill {
+                -webkit-text-fill-color: var(--tnt-color-#{$colorClass});
+            }
         }
     }
 
