`Added Placeholder attribute to TnTTypeahead component`
` `

`Modified the TnTTypeahead.razor file to include a new Placeholder attribute in the TnTInputText component, bound to the @Placeholder property. This allows the input text box to display placeholder text when empty. Also, a new Placeholder property was added to the TnTTypeahead.razor.cs file. This property, decorated with the [Parameter] attribute, can be used to pass data from a parent component and will hold the placeholder text for the input text box in the TnTTypeahead component.`

--- a/TnTComponents/Form/TnTTypeahead.razor
+++ b/TnTComponents/Form/TnTTypeahead.razor
@@ -57,10 +57,11 @@
 @code {
     private void RenderInputBox(RenderTreeBuilder __builder) {
         <TnTInputText @attributes="AdditionalAttributes"
-        @bind-Value="_searchText"
+                      @bind-Value="_searchText"
                       BindOnInput="true"
                       BindAfter="SearchAsync"
                       StartIcon="StartIcon"
+                      Placeholder="@Placeholder"
                       @onkeypress="KeyPressedAsync"
                       @ref="_inputTextBox" />
     }
