--- a/TnTComponents/Dialog/BasicConfirmationDialog.razor.css
+++ b/TnTComponents/Dialog/BasicConfirmationDialog.razor.css
@@ -1,5 +1,1 @@
-﻿.tnt-basic-confirmation-dialog-buttons {
-  display: flex;
-  flex-direction: row-reverse;
-  gap: 1rem;
-}
+.tnt-basic-confirmation-dialog-buttons{display:flex;flex-direction:row-reverse;gap:1rem}
