Update CSS rule for span.tnt-radio-group in _input.scss
Modified the margin property of span.tnt-radio-group from 0.5rem to 0.5rem 0, setting the top and bottom margins to 0.5rem and the left and right margins to 0. Also added a new property width: 100% to make the element occupy the full width of its parent container.

--- a/TnTComponents/Styles/TnTComponents/_input.scss
+++ b/TnTComponents/Styles/TnTComponents/_input.scss
@@ -536,7 +536,8 @@ span.tnt-radio-group {
     display: inline-flex;
     padding: 0.5rem;
     padding-right: 1rem;
-    margin: 0.5rem;
+    margin: 0.5rem 0;
+    width: 100%;
 
     span.tnt-radio-group-name {
         position: absolute;
