--- a/TnTComponents/Styles/TnTComponents/_typeahead.scss
+++ b/TnTComponents/Styles/TnTComponents/_typeahead.scss
@@ -16,8 +16,9 @@
         padding: 0.25rem;
         max-height: 50vh;
         overflow: auto;
-        margin: 0.25rem;
-        z-index: 3;
+        margin: 0.25rem 0.25rem 1rem 0.25rem;
+        z-index: 10;
+        position: absolute;
 
         ul {
             margin: 0;
