--- a/LiveTest/LiveTest.Client/Pages/Markdown.razor
+++ b/LiveTest/LiveTest.Client/Pages/Markdown.razor
@@ -1,4 +1,16 @@
 ﻿@page "/Markdown"
+@rendermode InteractiveAuto
+
+<TnTComponents.TnTMarkdownEditor @bind-Value="_value" @bind-RenderedHtml="_markdown" />
 
 
-<TnTComponents.TnTMarkdownEditor />
+<TnTComponents.TnTRow>
+    @_value
+</TnTComponents.TnTRow>
+<TnTComponents.TnTRow>
+    @_markdown
+</TnTComponents.TnTRow>
+@code {
+    private string? _value;
+    private MarkupString? _markdown;
+}
