Add Description property to TnTEvent and conditional rendering in TnTWeekView
A new nullable property `Description` has been added to the `TnTEvent` record in `TnTEvent.cs`. In `TnTWeekView.razor`, a conditional rendering block has been implemented. If the `Description` property of the `@event` object is not null or whitespace, a paragraph element with the class `tnt-body-small` is rendered, displaying the `Description` property of the `@event` object.

--- a/TnTComponents/Scheduler/TnTWeekView.razor
+++ b/TnTComponents/Scheduler/TnTWeekView.razor
@@ -60,6 +60,11 @@
                  @ondragend="@DragEventEnd"
                  @onclick="@(() => EventClicked(@event))">
                 @(@event.Title)
+                @if (!string.IsNullOrWhiteSpace(@event.Description)) {
+                    <p class="tnt-body-small">
+                        @(new MarkupString(@event.Description))
+                    </p>
+                }
             </div>
 
         }
