--- a/LiveTest/LiveTest/Components/App.razor
+++ b/LiveTest/LiveTest/Components/App.razor
@@ -18,7 +18,7 @@
 <body>
     <Routes />
     <script src="_framework/blazor.web.js"></script>
-    <TnTComponents.TnTThemeDesign Theme="TnTComponents.Theme.System" />
+    <TnTComponents.TnTThemeDesign Theme="TnTComponents.Theme.System" ThemeFileName="theme.json" />
 </body>
 
 </html>
