Update components and theme styling
- Removed `ButtonsTesting` examples from Buttons.razor and added `TnTNavLink` examples with new `Appearance` settings.
- Switched `TnTComponents` stylesheet in App.razor from minified to regular for easier debugging.
- Softened shadow colors in `theme.json` to improve design consistency.
- Enhanced `TnTNavLink.razor.cs` with a new `Appearance` parameter, replacing the `Outlined` boolean and updating default `TextColor` and `CssClass` for better styling flexibility.
- Introduced `TnTNavLinkAppearance` enumeration in a new file to define appearance options.
- Refined `.tnt-nav-link` styling in `_anchor.scss`, removing default padding and margin for a cleaner look and adding specific styles for `underlined` appearance.

--- a/LiveTest/LiveTest.Client/Pages/Buttons.razor
+++ b/LiveTest/LiveTest.Client/Pages/Buttons.razor
@@ -8,3 +8,16 @@
 <LiveTest.Client.Components.ButtonsTesting @rendermode="@RenderMode.InteractiveWebAssembly" />
 <LiveTest.Client.Components.ButtonsTesting @rendermode="@RenderMode.InteractiveAuto" />
 *@
+
+<TnTNavLink Href="#" Appearance="TnTNavLinkAppearance.None">
+    Appearance None
+</TnTNavLink>
+<TnTNavLink Href="#" Appearance="TnTNavLinkAppearance.Outlined">
+    Appearance Outlined
+</TnTNavLink>
+<TnTNavLink Href="#" Appearance="TnTNavLinkAppearance.Flat">
+    Appearance Flat
+</TnTNavLink>
+<TnTNavLink Href="#" Appearance="TnTNavLinkAppearance.Underlined">
+    Appearance Underlined
+</TnTNavLink>
