--- a/TnTComponents/Styles/TnTComponents/_anchor.scss
+++ b/TnTComponents/Styles/TnTComponents/_anchor.scss
@@ -1,11 +1,12 @@
-﻿a.tnt-components {
+﻿.tnt-components.tnt-nav-link {
     text-decoration: none;
     min-height: 1rem;
     cursor: pointer;
     display: inline-block;
-    padding: 0.5rem;
-    margin: 0.1rem;
     transition: background-color ease-in-out 200ms, color ease-in-out 200ms;
+    margin: 0;
+    padding: 0;
+    appearance: none;
 
     &:disabled {
         cursor: not-allowed;
@@ -14,5 +15,14 @@
     span.tnt-icon {
         vertical-align: middle;
         color: inherit;
+    }
+
+    &.tnt-flat, &.tnt-outlined {
+        padding: 0.5rem;
+        margin: 0.1rem;
+    }
+
+    &.tnt-underlined {
+        text-decoration: underline;
     }
 }
