Enhanced dialog component interaction
This commit introduces several improvements to the dialog component's usability and rendering behavior. In DialogComponent.razor, the `@rendermode InteractiveAuto` directive has been added to specify the component's rendering mode explicitly. The `TnTButton` component has been updated to include functionality for both opening and closing dialogs, with its label now dynamically reflecting an index value. Conditional rendering for a "Close" button has been implemented, appearing only when a dialog instance is present. A cascading parameter `_dialog` has been introduced to facilitate access to the dialog instance within dialog components. A static `index` variable has been implemented to uniquely identify dialogs, alongside methods `OpenCloseDialog` and `Close` for managing dialog states.

In Dialog.razor, the redundant `@rendermode` attribute has been removed, deferring to the component's internal specification or default behavior.

TnTDialog.cs has seen modifications to the `BuildRenderTree` method, ensuring styles and attributes are applied solely to the last dialog in the collection, thus prioritizing the topmost dialog's interactivity and styling. The overlay style logic has been refined to apply only to the last dialog, with added conditions for overlay color and blur effects. A new method, `RenderDialogContent`, standardizes dialog content creation across instances.

Lastly, _dialog.scss has been updated for more flexible styling of dialog containers and corrected for syntax with the addition of a closing brace.

--- a/LiveTest/LiveTest.Client/Components/DialogComponent.razor
+++ b/LiveTest/LiveTest.Client/Components/DialogComponent.razor
@@ -1,19 +1,46 @@
 ﻿@using LiveTest.Client.Pages
 @using TnTComponents.Dialog
+@rendermode InteractiveAuto
 <h3>DialogComponent</h3>
-
 
 <TnTComponents.TnTButton OnClick="OpenDialog">
     Open
 </TnTComponents.TnTButton>
 
+<TnTComponents.TnTButton OnClick="OpenCloseDialog">
+    Open Close Dialog @index
+</TnTComponents.TnTButton>
+
+@if (_dialog is not null) {
+    <TnTComponents.TnTButton OnClick="Close">
+        Close
+    </TnTComponents.TnTButton>
+}
+
 @code {
     [Inject]
     private TnTDialogService _service { get; set; } = default!;
+
+    [CascadingParameter]
+    private ITnTDialog? _dialog { get; set; }
+
+    private static int index;
 
     private async Task OpenDialog() {
         await _service.OpenAsync<Accordion>(options: new() {
                 Title = "My Title"
             });
     }
+
+    private async Task OpenCloseDialog() {
+        await _service.OpenAsync<DialogComponent>(options: new() {
+                Title = $"My Title {++index}",
+                ShowClose = true
+            });
+    }
+
+    private async Task Close() {
+        await _dialog!.CloseAsync();
+    }
 }
+
