--- a/LiveTest/LiveTest.Client/Pages/Dialog.razor
+++ b/LiveTest/LiveTest.Client/Pages/Dialog.razor
@@ -1,7 +1,7 @@
 ﻿@page "/dialog"
 <h3>Dialog</h3>
 
-<LiveTest.Client.Components.DialogComponent @rendermode="InteractiveAuto"/>
+<LiveTest.Client.Components.DialogComponent />
 
 @code {
 
