--- a/TnTComponents/Styles/TnTComponents/_dialog.scss
+++ b/TnTComponents/Styles/TnTComponents/_dialog.scss
@@ -9,7 +9,8 @@
     align-items: center;
     justify-content: center;
 
-    & > div.tnt-dialog-container {
+
+    div.tnt-dialog-container {
         max-width: 90%;
         min-height: 20%;
         max-height: 75%;
