--- a/TnTComponents/Core/TnTNavLink.razor
+++ b/TnTComponents/Core/TnTNavLink.razor
@@ -1,7 +1,7 @@
 ﻿@implements ITnTComponentBase
 @implements IDisposable
 @namespace TnTComponents
-@using TnTComponents.Core
+@using TnTComponents.Interfaces
 
 <a @attributes="AdditionalAttributes" href="@Href" class="@CssClass" style="@CssStyle" @ref="Element" >
     @StartIcon?.Render()
